# nocc_fullstack_stacks_supabase

./: README.md  pyproject.toml
src/nocc_fullstack_stacks_supabase/: __init__.py  agents.py  crew.py  logger.py  main.py  tasks.py  tools.py
src/nocc_fullstack_stacks_supabase/config/: agents.yaml  tasks.yaml
src/nocc_fullstack_stacks_supabase/prompts/: backend_prompts.py
src/nocc_fullstack_stacks_supabase/tools/: __init__.py  custom_tool.py
src/nocc_fullstack_stacks_supabase/utils/: backend_helpers.py  clarity_helpers.py  frontend_helpers.py
tests/: test_crew.py
tradebot/backend/: supabase.js
tradebot/logs/: generation_log.txt
